test/org/midica/testfiles/failing/define-too-many-args.midica
INCLUDE inc/instruments.midica

DEFINE CHORD crd crd

crd test c,d,e

0  test  /4
